Fix signup button alignment

--- a/app/assets/stylesheets/nav_bar_right.css
+++ b/app/assets/stylesheets/nav_bar_right.css
@@ -23,6 +23,14 @@
   align-self: center;
 }
 
+.signup {
+  margin: 0;
+}
+
+.nav-bar-link {
+  margin-right: 15px;
+}
+
 .dropdown-content-container {
   display: none;
   position: absolute;
